fix(popup.module.scss): lack of padding at the top and modal not fitting in the screen

--- a/apps/web/src/components/bedrock/popup/popup.module.scss
+++ b/apps/web/src/components/bedrock/popup/popup.module.scss
@@ -10,7 +10,8 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding: g.$padding-lg 0;
+  align-items: start;
   max-height: 100%;
   overflow: auto;
 }
